<resources>

    <string name="label">Weather</string>
    <string name="label_settings">Setting</string>

    <string name="choose_location">You city:</string>
    <string name="add_settings">Additionally:</string>

    <string name="location">Location</string>
    <string name="temperature">Temperature:</string>
    <string name="wind_velocity">Wind velocity:</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>


    <string name="temp_temperature"> -5</string>
    <string name="temp_windvelocity"> 1 м/с</string>
    <string name="temp_humidity"> 81%</string>
    <string name="temp_pressure"> 748 mmHg</string>

    <string name="next">Continue</string>


    <string name="app_name">Weather</string>
    <string name="geo">You location:</string>
    <string name="weatherNow">Weather now</string>

    <string name="title_activity_main">Main</string>
    <string name="accuaweather">AccuaWeather</string>
    <string name="gismeteo">GisMeteo</string>

    <string name="menu_description_aw">Weather is loading from AccuaWeather</string>
    <string name="menu_description_gm">Weather is loading from GisMeteo</string>


    <string-array name="cities">
        <item>Moscow</item>
    </string-array>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_menu_main">Main</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_about_the_developer">About the developer</string>
    <string name="nav_menu_feedback">Feedback</string>
    <string name="communicate">Communicate</string>


</resources>
