<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:background="@color/color_activity_back"
    >

    <TextView
        style="@style/LabelTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label" />

    <TextView
        android:id="@+id/text_city"
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/snow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/BaseTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/text_temperature"
            style="@style/BaseTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_temperature" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/BaseTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_velocity" />

        <TextView
            android:id="@+id/text_wind"
            style="@style/BaseTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_windvelocity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/BaseTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/text_humidity"
            style="@style/BaseTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_humidity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            style="@style/BaseTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure" />

        <TextView
            android:id="@+id/text_pressure"
            style="@style/BaseTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_pressure" />
    </LinearLayout>

    <aleksey.khokhlov.com.weather.ViewTemperature
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height" />

    <aleksey.khokhlov.com.weather.ViewTemperature
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height" />

</LinearLayout>