<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:background="@color/color_activity_back">

    <TextView
        style="@style/LabelTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_settings"/>

    <TextView
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_location"/>

    <EditText
        android:id="@+id/edit_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_settings"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/BaseTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_velocity"/>

            <TextView
                style="@style/BaseTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"/>

            <TextView
                style="@style/BaseTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <CheckBox
                style="@style/BaseTextStyle"
                android:id="@+id/chbWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                style="@style/BaseTextStyle"
                android:id="@+id/chbHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                style="@style/BaseTextStyle"
                android:id="@+id/chbPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

